--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="video-content">
-                
+                <video class="video" controls><source src="./assets/video/Python Recording 2021-02-23 at 10.46.20.mov" type="video/mp4"></video>
             </div>
         </div>
 
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="video-content">
-                
+                <video class="video" controls><source src="./assets/video/ShopLocalVideo.mp4" type="video/mp4"></video>
             </div>
         </div>
 
