Slideshow needs fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </header>
 
-        <div id="slideshow">
+        <!-- <div id="slideshow">
             <div>
                 <img class="slides" src="./assets/images/PythonProjectPics/Screenshot 2021-02-18 at 16.47.54.jpg" alt="add-comic-form">
             </div>
@@ -88,7 +88,7 @@
             <div>
                 <img class="slides" src="./assets/images/Shop Local Screens/Screenshot 2021-02-16 at 10.05.33.jpg" alt="">
             </div>
-        </div>
+        </div> -->
 
 
         <div id="links">
