Scroll indicator added

--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
             </div>
         </div>
 
+        <div id="arrows">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
         <div class="project" data-aos="zoom-out" data-aos-duration="1000">
             <div class="project-details">
                 <h3>Shop Local</h3>
