videos auto play

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="video-content" data-aos="zoom-in-right" data-aos-duration="500">
-                <video class="video" controls><source src="./assets/video/ShopLocalVideo.mp4" type="video/mp4"></video>
+                <video class="video" controls autoplay muted><source src="./assets/video/ShopLocalVideo.mp4" type="video/mp4"></video>
             </div>
         </div>
 
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="video-content" data-aos="zoom-in-right" data-aos-duration="500">
-                <video class="video" controls><source src="./assets/video/CosmodexVideo .mp4" type="video/mp4"></video>
+                <video class="video" controls autoplay muted><source src="./assets/video/CosmodexVideo .mp4" type="video/mp4"></video>
             </div>
         </div>
 
@@ -153,9 +153,13 @@
                 </div>
             </div>
             <div class="video-content" data-aos="zoom-in-right" data-aos-duration="500">
-                <video class="video" controls><source src="./assets/video/Python Recording 2021-02-23 at 10.46.20.mov" type="video/mp4"></video>
+                <video class="video" controls autoplay muted><source src="./assets/video/Python Recording 2021-02-23 at 10.46.20.mov" type="video/mp4"></video>
             </div>
-        </div>        
+        </div>
+        
+        <!-- <div id="end-of-page">
+            <span id="end">Kenny McKeown 2021</span>
+        </div> -->
 
         <div id="blank-space">
 
