--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
                 <img id="my-pic" src="./assets/myPic.png" alt="kenny-mckeown" data-aos="zoom-in" data-aos-duration="1000">
             </div>
             <div id="kenny-paragraph">
-                <p>Software developer with 12 years experience in audio engineering. Having recently discovered a new passion for coding and technical learning, I am now looking for a role that allows me to combine both areas of creativity whilst striving for continuous development. I am inspired to continue expanding my technical skillset, to work on complex and interesting software applications and put my technical experience to use in a collaborative team. I bring a technical mindset as well as strong interpersonal, fault finding and problem solving skills to a team and I am motivated to work with my peers to achieve a common goal.</p>
+                <p>I’m in the midst of a career change. After 13 years as a sound engineer I am making a change to software and web development.<br><br>
+                    I completed the CodeClan Professional Software Development course on the 12th of February 2021 and am now ready to venture into a new world.<br><br>
+                    The course at CodeClan is an intensive 16 week course. Does 16 weeks experience make me a software developer? Of course not… It does, however, prove my ability to learn, take on new complex tasks and deliver features and products to a deadline.
+                    I have a passion for aesthetically pleasing, well designed sites and applications.</p>
             </div>
         </div>
 
@@ -125,7 +128,18 @@
             <div class="project-details">
                 <h3>Shop Local</h3>
                 <div id="project-paragraph">
-                    <p>Shop Local is an application built in React with Javascript with a Spring back-end using Java with the IDE IntelliJ. The brief was to create an application that allows local businesses that are suffering from restrictions due to Covid-19 to be able to provide customers with appointments for services or time slots to be able to visit shops when it becomes safe to do so. In this project I was responsible for designing and styling the user interface. I took inspiration from similar themed sites such as Just Eat, Etsy and Amazon. The main idea I wanted to commit to in our project was to recreate a boutique or small retailer feel to the site rather than overloaded pages like the bigger retailer sites.</p>
+                    <h4>Brief:</h4>
+                        <p>Create an application allowing businesses to provide bookings and appointments for customers post Covid-19 lockdown.</p>
+                    <h4>Tech Stack</h4>
+                        <p>Javascript ES6<br>
+                        React<br>
+                        SQL database<br>
+                        Java<br>
+                        Spring Boot<br>
+                        Node Package Manager<br>
+                        CSS</p> 
+                    <a class="repo-link" href="https://github.com/C1V1L14N/final_project_frontend">GitHub Frontend Repo, </a>
+                    <a class="repo-link" href="https://github.com/emmDevs/Local_Services_Backend">GitHub Backend Repo.</a>
                 </div>
             </div>
             <div class="video-content" data-aos="zoom-in-right" data-aos-duration="500">
@@ -137,7 +151,17 @@
             <div class="project-details">
                 <h3>Cosmodex</h3>
                 <div id="project-paragraph">
-                    <p>Cosmodex is a Vue framework application I created as part of a team in our first group project at CodeClan. The focus of this project is the use of Vue with JavaScript for the front-end and Mongodb for the back-end. The application pulls data from a solar system API that we sorted and displayed in a simple but effective front end. The Cosmodex included animated buttons and planet icons that were designed and built from scratch. We also had a complete solar system simulation that was animated in pure CSS.</p>
+                    <h4>Brief:</h4>
+                        <p>Create an educational application allowing younger users to learn and engage with the solar system.</p>
+                    <h4>Tech Stack</h4>
+                        <p>Javascript ES6<br>
+                            Vue.js<br>
+                            Mongo database<br>
+                            Express Server<br>
+                            Solar System API<br>
+                            Node Package Manager</p> 
+                    <a class="repo-link" href="https://github.com/robbobby/the-curly-boys-space-adventure">GitHub Repo.</a>
+
                 </div>
             </div>
             <div class="video-content" data-aos="zoom-in-right" data-aos-duration="500">
@@ -149,7 +173,15 @@
             <div class="project-details" data-aos="zoom-out" data-aos-duration="1000">
                 <h3>Comic Shop Inventory</h3>
                 <div id="project-paragraph">
-                    <p>This is my very first outing in coding. It is a basic application that would allow a comic shop employee or owner to track their inventory. Although the scope of the project is very small, this is where I learned fundamental aspects of coding. This was my first introduction into employing RESTful routes, persistent data amongst many other coding practices.</p>
+                    <h4>Brief:</h4>
+                        <p>Create an inventory tracking application.</p>
+                    <h4>Tech Stack</h4>
+                        <p>Python<br>
+                            HTML5<br>
+                            CSS3<br>
+                            Flask<br>
+                            PostgreSQL</p> 
+                    <a class="repo-link" href="https://github.com/C1V1L14N/python_project_comic_shop">GitHub Repo.</a>
                 </div>
             </div>
             <div class="video-content" data-aos="zoom-in-right" data-aos-duration="500">
