--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
             </div>
         </div>
 
-        <div class="project">
-            <div class="project-details" data-aos="zoom-out" data-aos-duration="1000">
+        <div class="project" data-aos="zoom-out" data-aos-duration="1000">
+            <div class="project-details">
                 <h3>Comic Shop Inventory</h3>
                 <div id="project-paragraph">
                     <h4>Brief:</h4>
